<resources>
    <string name="app_name">ProjMag</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_through_google_using_your_epfl_email_address">Sign in through Google using your EPFL email address</string>
    <string name="project_Submission">Project Submission</string>
    <string name="lab">Laboratory</string>
    <string name="project_name">Project name</string>
    <string name="teacher">Teacher</string>
    <string name="project_TA">Project TA</string>
    <string name="numberOfParticipant">Number of participants</string>
    <string name="semester_project">Semester project</string>
    <string name="master_project">Master project</string>
    <string name="project_description">Project Description</string>
    <string name="submission">Submit</string>
    <string name="loading">Loading…</string>
    <string name="cv_creation_intro_title">CV creation</string>
    <string name="cv_creation_intro_body">Let\'s create your curriculum vitae step by step</string>
    <string name="cv_creation_intro_instruction">Just swipe to go through the forms</string>
    <string name="cv_summary_title">Your Summary</string>
    <string name="cv_summary_hint">Some sentences to introduce you and describe your professional or academic career</string>
    <string name="cv_language_title">Languages</string>
    <string name="cv_language_name_field">Language</string>
    <string name="cv_submission_title">The End</string>
    <string name="cv_submission_button">Submit</string>
    <string name="LastName">LastName</string>
    <string name="FirstName">FirstName</string>
    <string name="age">Age</string>
    <string name="phone_number">Phone number</string>
    <string name="sciper">Sciper</string>
    <string name="search">search</string>
    <string name="profile">profileButton</string>
    <string name="share">Share</string>
    <string name="submit">Add a new project to the list</string>
    <string name="play_video">Play Video</string>
    <string name="add_video">Add Video</string>
    <string name="could_not_download_video">An error occurred while downloading a video.</string>
    <string name="cv_period_description">Description</string>
    <string name="cv_period_school_name">School Name</string>
    <string name="cv_period_period_title">Period (to change)</string>
    <string name="cv_period_location">Location</string>
    <string name="cv_period_to">To (Year)</string>
    <string name="cv_period_from">From (Year)</string>
    <string name="cv_period_add">Add</string>
    <string name="cv_skills_hint">Your skill</string>
    <string name="cv_skills_title">Your Skills</string>
    <string name="cv_cardview_close">close</string>


    <string name="add_a_video_to_cvd">Add a video to your CV</string>
    <string name="add">Add</string>


    <string name="display_number_student">Number of participant : %d</string>
    <string name="display_bachelor_only">Bachelor semester</string>
    <string name="bachelor">Bachelor</string>
    <string name="display_master_only">Master semester</string>
    <string name="master">Master</string>
    <string name="display_bachelor_and_master">Bachelor &amp; Master semester</string>
    <string name="display_not_found">Project not found</string>
    <string name="display_creation_date_format">"EEEE, d MMM yyyy"</string>

    <string name="video_subtitling_title">Video Subtitling</string>
    <string name="video_subtitling_set_start">Set Start</string>
    <string name="video_subtitling_set_end">Set End</string>
    <string name="video_subtitling_field">Subtitling Text</string>
    <string name="video_subtitling_add">Add</string>
    <string name="form_add_subtitle_button">Add Subtitle</string>
    <string name="video_subtitling_cant_open_video">Can\'t open video for subtitling</string>
    <string name="video_subtitling_instruction">This application uses Android Captions. To see subtitles you have to turn on the captions (currently only in English) in your device settings!\nYou can change these settings at any time under, device Settings > Accessibility > Caption Preferences</string>
    <string name="video_subtitling_instruction_ok_answer">You can change these settings at any time under, device Settings > Accessibility > Caption Preferences</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="settings">Settings</string>


    <string name="tag_selection_instructions">Add tags : select the right tags for your project and add/remove by clicking on them</string>
    <string name="tag_add_button_title">add tags</string>
    <string name="filter_favorites">Favorites</string>
    <string name="filter_own_projects">Own projects</string>

    <string name="favorite_add_button">add project to favorites</string>
    <string name="favorite_remove_button">remove project from favorites</string>

    <string name="tag_save_button">Save</string>
    <string name="failure">failure</string>

    <string name="section_selection_instructions">Sections allowed to take the project</string>
    <string name="section_save_button">Save</string>
    <string name="section_add_button_title">add Section</string>

    <string name="show_cv">Show cv</string>
    <string name="create_cv">create cv</string>
    <string name="sub_change">Submit change</string>

    <string name="waiting_projectid_null">The ProjectId was not valid</string>
    <string name="waiting_firstname">First name : %s</string>
    <string name="waiting_lastname">Last name : %s</string>
    <string name="waiting_section">Section : %s</string>
    <string name="waiting_profile">Profile</string>
    <string name="waiting_cv">CV</string>
    <string name="waiting_accept">Accept</string>
    <string name="waiting_reject">Reject</string>
    <string name="waiting_error_msg">An error has occurred while updating candidature : %s</string>
    <string name="waiting_accepted_msg">"Candidature accepted."</string>
    <string name="waiting_rejected_msg">"Candidature rejected."</string>
    <string name="waiting_button">waitingListButton</string>
    <string name="waiting_not_allowed">"Only author of this project can access this."</string>


    <string name="db_error_msg">An error has occurred while loading database : %s</string>
    <string name="generate_barcode">Generate Barcode</string>
    <string name="success">success</string>

    <string name="professor">Professor</string>
    <string name="student">Student</string>
    <string name="selection">Your selection:</string>

    <string name="filter">Filter</string>
    <string name="PHD">PHD</string>
    <string name="applied">Applied</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="profile_loading_failed">Failed to load profile</string>
    <string name="cv_loading_failed">Failed to load cv</string>
    <string name="filter_settings_icon">filter settings icon</string>
    <string name="preferences">Preferences</string>
    <string name="sending_preferences">Sending Preferences…</string>
    <string name="failed_send_pref">Failed to Send Preferences</string>
    <string name="invalid_data">Invalid data</string>
    <string name="couldnt_get_data">Couldn\'t get data</string>
    <string name="apply_text">APPLY</string>
    <string name="unaply_text">UNAPPLY</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="send_comment_icon">send_comment_icon</string>
    <string name="march_11">March 11</string>
    <string name="hello_how_are_you">Hello! How are you?</string>

    <string name="edit_button">Edit</string>

    <string name="cv_display_cv_null">The cv is null.</string>
    <string name="cv_display_title">CurriculumVitae</string>
    <string name="cv_display_summary_title">Summary</string>
    <string name="cv_display_item_language">Language : %s</string>
    <string name="cv_display_item_level">Level : %s</string>
    <string name="cv_display_item_location">Location : %s</string>
    <string name="cv_display_item_skill">Skill : %s</string>

    <string name="profile_display_title">Profile</string>
    <string name="profile_display_firstname">Firstname : %s</string>
    <string name="profile_display_lastname">Lastname : %s</string>
    <string name="profile_display_age">Age : %s</string>
    <string name="profile_display_gender">Gender : %s</string>
    <string name="profile_display_sciper">Sciper : %s</string>
    <string name="profile_display_phone">Phone : %s</string>
    <string name="profile_display_role">Role : %s</string>
    <string name="profile_display_profile_null">The profile is not valid</string>
    <string name="sender_anonymous">Anonymous</string>
    <string name="failed_to_get_comments">Failed to get comments</string>


</resources>